# sdk

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/configs/: app.hh
include/ncli/: ncli.hh
src/: main.cc
src/ncli/: ncli.cc
